# openmls

./: .gitignore  Cargo.toml  README.md
basic_credential/src/: lib.rs
cli/src/: identity.rs  openmls_rust_persistent_crypto.rs  user.rs
delivery-service/ds-lib/src/: lib.rs
interop_client/src/: main.rs
kc/: .env  Cargo.toml
kc/migrations/: 20250226105323_mls-user.sql
kc/src/: identity.rs  lib.rs  main.bak  main.rs  openmls_rust_persistent_crypto.rs  serialize_any_hashmap.rs  user.rs
kc/tests/: group_test.rs
memory_storage/src/: lib.rs
openmls-wasm/src/: lib.rs
openmls/examples/: large-groups.rs
openmls/src/: error.rs  kat_vl.rs  lib.rs  prelude.rs  skip_validation.rs  storage.rs  utils.rs
openmls/src/binary_tree/: tests.rs
openmls/src/ciphersuite/: aead.rs  hpke.rs  secret.rs  signable.rs  signature.rs
openmls/src/credentials/: mod.rs
openmls/src/extensions/: application_id_extension.rs  errors.rs  external_sender_extension.rs  mod.rs  ratchet_tree_extension.rs  required_capabilities.rs  tests.rs
openmls/src/framing/: codec.rs  message_out.rs  mls_auth_content.rs  mls_auth_content_in.rs  mls_content.rs  mls_content_in.rs  mod.rs  private_message.rs  public_message.rs  sender.rs  tests.rs  validation.rs
openmls/src/group/: errors.rs  group_context.rs  mod.rs
openmls/src/key_packages/: key_package_in.rs  lifetime.rs  mod.rs  tests.rs
openmls/src/messages/: external_proposals.rs  group_info.rs  mod.rs  proposals_in.rs
openmls/src/schedule/: errors.rs  message_secrets.rs  mod.rs  psk.rs
openmls/src/storage/: kat_storage_stability.rs
openmls/tests/: decryption_key_index.rs  external_commit.rs  mls_group.rs  opaque_extension.rs
openmls_rust_crypto/: Cargo.toml
openmls_rust_crypto/src/: lib.rs
openmls_test/src/: lib.rs
sqlite_storage/: .env  Cargo.toml  README.md
sqlite_storage/migrations/: 20240829035107_mls.sql  V1__initial.sql
sqlite_storage/src/: lib.rs  storage_provider.rs
sqlite_storage/tests/: proposals.rs
traits/src/: crypto.rs  public_storage.rs  storage.rs
(+65 files in other folders)
