[package]
name = "kc"
version = "0.1.0"
authors = ["OpenMLS Authors"]
edition = "2021"

[dependencies]
anyhow = "1.0.57"
base64 = "0.13"
log = "0.4"
pretty_env_logger = "0.4"
openmls = { path = "../openmls", features = ["test-utils"] }
openmls_traits = { path = "../traits" }
openmls_rust_crypto = { path = "../openmls_rust_crypto" }
openmls_sqlite_storage = { path = "../sqlite_storage" }
openmls_basic_credential = { path = "../basic_credential" }
serde = { version = "^1.0" }
thiserror = "1.0"
serde_json = "1.0"
rand_chacha = { version = "0.3.1" }
hex = "0.4.3"
tokio = { version = "1.0.0", features = ["rt", "rt-multi-thread", "macros"] }
sqlx = {version = "0.8.0", features = ["runtime-tokio", "sqlite"]}

[dependencies.termion]
version = "1.5"
git = "https://gitlab.redox-os.org/Jezza/termion.git"
branch = "windows-support"
