[package]
name = "openmls_sqlite_storage"
authors = ["KC Authors"]
version = "0.3.0"
edition = "2021"
description = "A very basic storage for OpenMLS implementing openmls_traits."
license = "MIT"
documentation = "https://docs.rs/openmls_memory_storage"
repository = "https://github.com/openmls/openmls/tree/main/memory_storage"
readme = "README.md"

[dependencies]
openmls_traits = { version = "0.3.0", path = "../traits" }
thiserror = "1.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = { version = "0.4" }
hex = { version = "0.4", features = ["serde"], optional = true }
base64 = { version = "0.13", optional = true }

futures = "0.3"
sqlx = {version = "0.7.1", features = ["runtime-tokio", "sqlite"]}
tokio = {version = "1.28.1", features = ["sync", "rt", "rt-multi-thread", "macros"]}
futures-util = "0.3"
async-trait = "0.1.41"
anyhow = "1.0.57"
flume = "0.11.0"

[features]
test-utils = ["hex", "openmls_traits/test-utils"] # Enable test utilites
persistence = ["base64"]

[dev-dependencies]
openmls_sqlite_storage = { path = ".", features = ["test-utils"] }
